--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -8,7 +8,7 @@
         </form>
         <ul class="nav pull-right">
             <li><a href="/">首页</a></li>
-            <li><a href="/topic/create">新手入门</a></li>
+            <li><a href="/topic/create">点击添加话题</a></li>
             <li><a href="/api">API</a></li>
             <li><a href="/about">关于</a></li>
             <% if(user){ %>
