--- a/views/reg/reg.ejs
+++ b/views/reg/reg.ejs
@@ -45,7 +45,7 @@
                     </div>
                 </div>
                 <div class="form-actions">
-                    <input type="submit" class="span-primary" value='登录'>
+                    <input type="submit" class="span-primary" value='注册'>
                     <input type="reset" class="span-info" value='重置表单'>
                 </div>
             </form>
