--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -5,10 +5,10 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title><%= title %></title>
-        <link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css">
-        <link rel='stylesheet' href='/styles/common.css'>
-        <link rel='stylesheet' href='/styles/style.css'>
-        <link rel='stylesheet' href='/styles/jquery.atwho.css'>
+        <link rel="stylesheet" href="/public/bootstrap/css/bootstrap.min.css">
+        <link rel='stylesheet' href='/public/styles/common.css'>
+        <link rel='stylesheet' href='/public/styles/style.css'>
+        <link rel='stylesheet' href='/public/styles/jquery.atwho.css'>
 
         <script src="http://cdn.bootcss.com/jquery/1.11.1/jquery.min.js"></script>
         <script src="//cdn.bootcss.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
