--- a/views/topic/create.ejs
+++ b/views/topic/create.ejs
@@ -38,12 +38,12 @@
         </div>
     </div>
 </div>
-<link rel="stylesheet" href="/webuploader/webuploader.css">
-<link rel='stylesheet' href='/editor/editor.css' />
-<script src='/markdownit.js'></script>
-<script src='/webuploader/webuploader.withoutimage.js'></script>
-<script src='/editor/editor.js'></script>
-<script src='/editor/ext.js'></script>
+<link rel="stylesheet" href="/public/webuploader/webuploader.css">
+<link rel='stylesheet' href='/public/editor/editor.css' />
+<script src='/public/markdownit.js'></script>
+<script src='/public/webuploader/webuploader.withoutimage.js'></script>
+<script src='/public/editor/editor.js'></script>
+<script src='/public/editor/ext.js'></script>
 <script>
     $(function(){
         var editor = new Editor();
