--- a/public/editor/editor.css
+++ b/public/editor/editor.css
@@ -1,10 +1,10 @@
 @font-face {
 	font-family: 'icomoon';
-	src:url('/editor/fonts/icomoon.eot');
-	src:url('/editor/fonts/icomoon.eot?#iefix') format('embedded-opentype'),
-		url('/editor/fonts/icomoon.woff') format('woff'),
-		url('/editor/fonts/icomoon.ttf') format('truetype'),
-		url('/editor/fonts/icomoon.svg#icomoon') format('svg');
+	src:url('/public/editor/fonts/icomoon.eot');
+	src:url('/public/editor/fonts/icomoon.eot?#iefix') format('embedded-opentype'),
+		url('/public/editor/fonts/icomoon.woff') format('woff'),
+		url('/public/editor/fonts/icomoon.ttf') format('truetype'),
+		url('/public/editor/fonts/icomoon.svg#icomoon') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
